--- a/Notes/6.6-Padding-Struct.md
+++ b/Notes/6.6-Padding-Struct.md
@@ -292,3 +292,339 @@ Free memory time:0.021840 seconds
 Total time:240.547397 seconds
 END!
 ```
+---
+### Parallel, managed, struct-pad, 1200, profile
+
+```
+$ nvprof ./cnn-cifar10-profile 
+Parallel (pad) Code
+CNN for 1200 images
+==649157== NVPROF is profiling process 649157, command: ./cnn-cifar10-profile
+Loading input batch 1...
+Load Data time:0.026012 seconds
+Create Network time:0.001412 seconds
+Load Network Parameters time:0.007987 seconds
+Create Ouputs time:0.000131 seconds
+
+Net Forward total time:6.275401 seconds
+    Time for conv1: 2.531005 seconds
+    Time for relu1: 0.137797 seconds
+    Time for pool1: 0.088365 seconds
+    Time for conv2: 1.888635 seconds
+    Time for relu2: 0.163610 seconds
+    Time for pool2: 0.127265 seconds
+    Time for conv3: 0.960923 seconds
+    Time for relu3: 0.096763 seconds
+    Time for pool3: 0.056891 seconds
+    Time for fc: 0.221974 seconds
+    Time for softmax: 0.000613 seconds
+
+  Conv: 5.380564 seconds
+  ReLU: 0.398169 seconds
+  Pool: 0.272521 seconds
+  FC:   0.221974 seconds
+  Softmax: 0.000613 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000036 seconds
+Free memory time:0.000196 seconds
+Total time:6.311175 seconds
+END!
+==649157== Profiling application: ./cnn-cifar10-profile
+==649157== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:   84.23%  4.29693s      3600  1.1936ms  393.02us  2.7090ms  _8layers_c_conv_forward_80_gpu
+                   15.76%  804.04ms      3600  223.35us  52.864us  917.15us  _8layers_c_pad_input_61_gpu
+                    0.01%  641.50us         3  213.83us  1.6640us  454.88us  [CUDA memset]
+      API calls:   95.57%  5.13800s     14409  356.58us     973ns  3.4258ms  cuStreamSynchronize
+                    2.88%  155.10ms         1  155.10ms  155.10ms  155.10ms  cuDevicePrimaryCtxRetain
+                    0.87%  46.856ms      7200  6.5070us  3.3680us  816.14us  cuLaunchKernel
+                    0.38%  20.693ms         1  20.693ms  20.693ms  20.693ms  cuMemAllocManaged
+                    0.11%  5.8567ms     14400     406ns     184ns  237.11us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.08%  4.3024ms         1  4.3024ms  4.3024ms  4.3024ms  cuMemAlloc
+                    0.03%  1.7267ms      7209     239ns     123ns  16.634us  cuDeviceGetAttribute
+                    0.02%  1.2710ms      1218  1.0430us     241ns  242.70us  cuPointerGetAttributes
+                    0.02%  1.2279ms         1  1.2279ms  1.2279ms  1.2279ms  cuMemAllocHost
+                    0.01%  740.65us         3  246.88us  14.073us  518.84us  cuMemsetD8
+                    0.01%  431.37us         1  431.37us  431.37us  431.37us  cuModuleLoadDataEx
+                    0.00%  11.464us         1  11.464us  11.464us  11.464us  cuCtxGetCurrent
+                    0.00%  10.283us         1  10.283us  10.283us  10.283us  cuDeviceGetPCIBusId
+                    0.00%  2.9150us         3     971ns     163ns  1.9090us  cuCtxSetCurrent
+                    0.00%  2.7490us         2  1.3740us     710ns  2.0390us  cuModuleGetFunction
+                    0.00%  2.1530us         3     717ns     188ns  1.7220us  cuDeviceGetCount
+                    0.00%  1.2820us         2     641ns     425ns     857ns  cuDeviceTotalMem
+                    0.00%  1.0830us         3     361ns     203ns     631ns  cuDriverGetVersion
+                    0.00%     774ns         2     387ns     177ns     597ns  cuDeviceGet
+                    0.00%     713ns         1     713ns     713ns     713ns  cuDeviceComputeCapability
+ OpenACC (excl):   80.58%  4.32553s      7200  600.77us  1.5610us  3.4267ms  acc_wait@layers.c:80
+                   15.43%  828.13ms      7200  115.02us  1.8770us  2.2391ms  acc_wait@layers.c:61
+                    1.85%  99.488ms      3600  27.635us  1.2650us  880.29us  acc_enter_data@layers.c:80
+                    0.60%  32.025ms      3600  8.8950us  5.8170us  1.4996ms  acc_enqueue_launch@layers.c:61 (_8layers_c_pad_input_61_gpu)
+                    0.50%  26.768ms      3600  7.4350us  4.2700us  807.67us  acc_enqueue_launch@layers.c:80 (_8layers_c_conv_forward_80_gpu)
+                    0.27%  14.368ms      3600  3.9910us  2.7820us  214.38us  acc_compute_construct@layers.c:61
+                    0.25%  13.606ms      3600  3.7790us  1.9830us  803.46us  acc_enter_data@layers.c:61
+                    0.25%  13.468ms      3600  3.7400us  2.3890us  531.58us  acc_compute_construct@layers.c:80
+                    0.15%  7.8391ms      3600  2.1770us     955ns  901.65us  acc_exit_data@layers.c:61
+                    0.11%  5.6861ms      3600  1.5790us     918ns  96.494us  acc_exit_data@layers.c:80
+                    0.01%  516.36us         1  516.36us  516.36us  516.36us  acc_device_init
+                    0.00%  195.38us         9  21.709us  6.4860us  122.89us  acc_enter_data@layers.c:42
+                    0.00%  60.036us         9  6.6700us     771ns  12.880us  acc_exit_data@layers.c:53
+                    0.00%  34.607us         9  3.8450us  1.8100us  18.456us  acc_wait@layers.c:42
+                    0.00%  11.432us         3  3.8100us  2.3130us  6.6300us  acc_update@layers.c:296
+
+==649157== Unified Memory profiling result:
+Device "Tesla V100-PCIE-32GB (0)"
+   Count  Avg Size  Min Size  Max Size  Total Size  Total Time  Name
+   15723  15.716KB  4.0000KB  0.9961MB  241.3203MB  55.42295ms  Host To Device
+   22864  10.173KB  4.0000KB  448.00KB  227.1523MB  41.49953ms  Device To Host
+    9771         -         -         -           -   1.280411s  Gpu page fault groups
+     222         -         -         -           -  105.6929ms  Page throttles
+    4939  4.0000KB  4.0000KB  4.0000KB  19.29297MB           -  Memory thrashes
+      28  4.0000KB  4.0000KB  4.0000KB  112.0000KB           -  Remote mapping from device
+Total CPU Page faults: 16208
+Total CPU thrashes: 4939
+Total CPU throttles: 62
+Total remote mappings to CPU: 28
+```
+
+
+#### nvprof
+```
+$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 1200 images
+CUPTI ERROR: cuptiActivityEnable(CUPTI_ACTIVITY_KIND_KERNEL) returned: CUPTI_ERROR_INSUFFICIENT_PRIVILEGES, 
+         at ../../src-cupti/prof_cuda_cupti.c:338.
+Loading input batch 1...
+Load Data time:0.022781 seconds
+Create Network time:0.000984 seconds
+Load Network Parameters time:0.008054 seconds
+Create Ouputs time:0.000040 seconds
+
+Net Forward total time:5.843870 seconds
+    Time for conv1: 2.509013 seconds
+    Time for relu1: 0.062691 seconds
+    Time for pool1: 0.067654 seconds
+    Time for conv2: 1.885188 seconds
+    Time for relu2: 0.049551 seconds
+    Time for pool2: 0.069531 seconds
+    Time for conv3: 1.030815 seconds
+    Time for relu3: 0.044189 seconds
+    Time for pool3: 0.025389 seconds
+    Time for fc: 0.099135 seconds
+    Time for softmax: 0.000330 seconds
+
+  Conv: 5.425016 seconds
+  ReLU: 0.156430 seconds
+  Pool: 0.162574 seconds
+  FC:   0.099135 seconds
+  Softmax: 0.000330 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000049 seconds
+Free memory time:0.000097 seconds
+Total time:5.875874 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  make_conv_layer  NVIDIA  devicenum=0
+    time(us): 0
+    42: data region reached 9 times
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  free_conv  NVIDIA  devicenum=0
+    time(us): 0
+    53: data region reached 9 times
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  pad_input  NVIDIA  devicenum=0
+    time(us): 0
+    61: compute region reached 3600 times
+        61: kernel launched 3600 times
+            grid: [960]  block: [128]
+            elapsed time(us): total=956,294 max=960 min=65 avg=265
+    61: data region reached 7200 times
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 0
+    80: compute region reached 3600 times
+        80: kernel launched 3600 times
+            grid: [400]  block: [128]
+            elapsed time(us): total=4,373,169 max=2,491 min=439 avg=1,214
+    80: data region reached 7200 times
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  load_conv  NVIDIA  devicenum=0
+    time(us): 0
+    296: update directive reached 3 times
+```
+
+### Parallel, managed, struct-pad, 50k, profile
+
+#### nvprof
+```
+$ nvprof ./cnn-cifar10-profile 
+Parallel (pad) Code
+CNN for 50000 images
+==609769== NVPROF is profiling process 609769, command: ./cnn-cifar10-profile
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.892674 seconds
+Create Network time:0.002188 seconds
+Load Network Parameters time:0.008230 seconds
+Create Ouputs time:0.000811 seconds
+
+Net Forward total time:310.190234 seconds
+    Time for conv1: 104.962387 seconds
+    Time for relu1: 22.961910 seconds
+    Time for pool1: 5.096130 seconds
+    Time for conv2: 80.003359 seconds
+    Time for relu2: 22.934966 seconds
+    Time for pool2: 4.932743 seconds
+    Time for conv3: 43.075883 seconds
+    Time for relu3: 13.159397 seconds
+    Time for pool3: 2.158208 seconds
+    Time for fc: 10.857713 seconds
+    Time for softmax: 0.017873 seconds
+
+  Conv: 228.041628 seconds
+  ReLU: 59.056274 seconds
+  Pool: 12.187082 seconds
+  FC:   10.857713 seconds
+  Softmax: 0.017873 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.000720 seconds
+Free memory time:0.020625 seconds
+Total time:311.115481 seconds
+END!
+==609769== Profiling application: ./cnn-cifar10-profile
+==609769== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:   81.03%  172.925s    150000  1.1528ms  364.16us  5.8219ms  _8layers_c_conv_forward_80_gpu
+                   18.97%  40.4954s    150000  269.97us  51.455us  5.0774ms  _8layers_c_pad_input_61_gpu
+                    0.00%  732.44us         3  244.15us  75.903us  439.39us  [CUDA memset]
+      API calls:   98.90%  214.660s    600009  357.76us  1.0300us  5.8225ms  cuStreamSynchronize
+                    0.82%  1.77665s    300000  5.9220us  3.4160us  2.2794ms  cuLaunchKernel
+                    0.10%  224.50ms    600000     374ns     179ns  871.60us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.10%  222.96ms         1  222.96ms  222.96ms  222.96ms  cuDevicePrimaryCtxRetain
+                    0.04%  76.677ms    300009     255ns     134ns  796.72us  cuDeviceGetAttribute
+                    0.02%  34.286ms     50028     685ns     218ns  659.22us  cuPointerGetAttributes
+                    0.01%  20.798ms         2  10.399ms  115.97us  20.682ms  cuMemAllocManaged
+                    0.01%  20.482ms         1  20.482ms  20.482ms  20.482ms  cuMemFree
+                    0.00%  1.2997ms         1  1.2997ms  1.2997ms  1.2997ms  cuMemAllocHost
+                    0.00%  894.30us         3  298.10us  88.935us  566.35us  cuMemsetD8
+                    0.00%  439.94us         1  439.94us  439.94us  439.94us  cuModuleLoadDataEx
+                    0.00%  121.57us         1  121.57us  121.57us  121.57us  cuMemAlloc
+                    0.00%  13.017us         2  6.5080us     513ns  12.504us  cuModuleGetFunction
+                    0.00%  10.498us         1  10.498us  10.498us  10.498us  cuDeviceGetPCIBusId
+                    0.00%  3.5450us         2  1.7720us     123ns  3.4220us  cuDeviceTotalMem
+                    0.00%  3.1740us         3  1.0580us     262ns  1.9170us  cuCtxSetCurrent
+                    0.00%  1.9040us         3     634ns     172ns  1.5280us  cuDeviceGetCount
+                    0.00%     884ns         3     294ns     141ns     531ns  cuDriverGetVersion
+                    0.00%     676ns         1     676ns     676ns     676ns  cuDeviceComputeCapability
+                    0.00%     594ns         2     297ns     157ns     437ns  cuDeviceGet
+                    0.00%     537ns         1     537ns     537ns     537ns  cuCtxGetCurrent
+ OpenACC (excl):   76.44%  173.945s    300000  579.82us  1.6290us  5.8259ms  acc_wait@layers.c:80
+                   18.17%  41.3496s    300000  137.83us  1.8760us  5.0820ms  acc_wait@layers.c:61
+                    3.50%  7.96963s    150000  53.130us  1.2550us  11.196ms  acc_enter_data@layers.c:80
+                    0.50%  1.13555s    150000  7.5700us  5.6940us  1.3448ms  acc_enqueue_launch@layers.c:61 (_8layers_c_pad_input_61_gpu)
+                    0.48%  1.09746s    150000  7.3160us  4.3630us  2.2829ms  acc_enqueue_launch@layers.c:80 (_8layers_c_conv_forward_80_gpu)
+                    0.25%  563.67ms    150000  3.7570us  2.7510us  1.0883ms  acc_compute_construct@layers.c:61
+                    0.24%  554.28ms    150000  3.6950us  2.4180us  1.7667ms  acc_compute_construct@layers.c:80
+                    0.22%  507.65ms    150000  3.3840us  1.8640us  2.0477ms  acc_enter_data@layers.c:61
+                    0.10%  218.54ms    150000  1.4560us     906ns  813.10us  acc_exit_data@layers.c:80
+                    0.09%  213.27ms    150000  1.4210us     981ns  801.80us  acc_exit_data@layers.c:61
+                    0.00%  529.60us         1  529.60us  529.60us  529.60us  acc_device_init
+                    0.00%  180.76us         9  20.084us  3.3920us  107.37us  acc_enter_data@layers.c:42
+                    0.00%  42.828us         9  4.7580us     728ns  20.616us  acc_exit_data@layers.c:53
+                    0.00%  28.609us         9  3.1780us  1.8060us  12.495us  acc_wait@layers.c:42
+                    0.00%  10.612us         3  3.5370us  2.0870us  5.6460us  acc_update@layers.c:296
+
+==609769== Unified Memory profiling result:
+Device "Tesla V100-PCIE-32GB (0)"
+   Count  Avg Size  Min Size  Max Size  Total Size  Total Time  Name
+  725027  20.124KB  4.0000KB  0.9961MB  13.91497GB   2.779784s  Host To Device
+ 2289076  6.1113KB  4.0000KB  252.00KB  13.34262GB   3.462761s  Device To Host
+  299386         -         -         -           -  65.292323s  Gpu page fault groups
+     445         -         -         -           -  233.6201ms  Page throttles
+  416512  4.0000KB  4.0000KB  4.0000KB  1.588867GB           -  Memory thrashes
+      60  4.0000KB  4.0000KB  4.0000KB  240.0000KB           -  Remote mapping from device
+Total CPU Page faults: 1935281
+Total CPU thrashes: 416512
+Total CPU throttles: 190
+Total remote mappings to CPU: 60
+```
+#### NV_ACC_TIME
+```
+$ ./cnn-cifar10 
+Parallel (pad) Code
+CNN for 50000 images
+CUPTI ERROR: cuptiActivityEnable(CUPTI_ACTIVITY_KIND_KERNEL) returned: CUPTI_ERROR_INSUFFICIENT_PRIVILEGES, 
+         at ../../src-cupti/prof_cuda_cupti.c:338.
+Loading input batch 1...
+Loading input batch 2...
+Loading input batch 3...
+Loading input batch 4...
+Loading input batch 5...
+Load Data time:0.582867 seconds
+Create Network time:0.001689 seconds
+Load Network Parameters time:0.008533 seconds
+Create Ouputs time:0.000643 seconds
+
+Net Forward total time:251.175803 seconds
+    Time for conv1: 95.312213 seconds
+    Time for relu1: 11.206251 seconds
+    Time for pool1: 3.145062 seconds
+    Time for conv2: 77.949277 seconds
+    Time for relu2: 9.941082 seconds
+    Time for pool2: 2.816316 seconds
+    Time for conv3: 41.150042 seconds
+    Time for relu3: 4.215646 seconds
+    Time for pool3: 0.174193 seconds
+    Time for fc: 5.236835 seconds
+    Time for softmax: 0.012481 seconds
+
+  Conv: 214.411532 seconds
+  ReLU: 25.362980 seconds
+  Pool: 6.135570 seconds
+  FC:   5.236835 seconds
+  Softmax: 0.012481 seconds
+
+Net Accuracy: 78.84 % 
+Net Accuracy time:0.001009 seconds
+Free memory time:0.021306 seconds
+Total time:251.791849 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  make_conv_layer  NVIDIA  devicenum=0
+    time(us): 0
+    42: data region reached 9 times
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  free_conv  NVIDIA  devicenum=0
+    time(us): 0
+    53: data region reached 9 times
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  pad_input  NVIDIA  devicenum=0
+    time(us): 0
+    61: compute region reached 150000 times
+        61: kernel launched 150000 times
+            grid: [960]  block: [128]
+            elapsed time(us): total=44,571,643 max=9,869 min=64 avg=297
+    61: data region reached 300000 times
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 0
+    80: compute region reached 150000 times
+        80: kernel launched 150000 times
+            grid: [400]  block: [128]
+            elapsed time(us): total=165,459,957 max=4,750 min=369 avg=1,103
+    80: data region reached 300000 times
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-pad/layers.c
+  load_conv  NVIDIA  devicenum=0
+    time(us): 0
+    296: update directive reached 3 times
+```
