--- a/Notes/6.7-Paralle-Data.md
+++ b/Notes/6.7-Paralle-Data.md
@@ -1,5 +1,136 @@
 # Data Transfers
 
+## -gpu=managed
+### 1200 images
+#### NV_ACC_TIME=1
+
+```
+$ ./cnn-cifar10 
+Parallel (if) Code
+CNN for 1200 images
+CUPTI ERROR: cuptiActivityEnable(CUPTI_ACTIVITY_KIND_KERNEL) returned: CUPTI_ERROR_INSUFFICIENT_PRIVILEGES, 
+         at ../../src-cupti/prof_cuda_cupti.c:338.
+Loading input batch 1...
+Load Data time:0.021731 seconds
+Create Network time:0.000058 seconds
+Load Network Parameters time:0.008021 seconds
+Create Ouputs time:0.000049 seconds
+
+Net Forward total time:7.577612 seconds
+    Time for conv1: 3.192707 seconds
+    Time for relu1: 0.175842 seconds
+    Time for pool1: 0.053587 seconds
+    Time for conv2: 2.813388 seconds
+    Time for relu2: 0.071313 seconds
+    Time for pool2: 0.015867 seconds
+    Time for conv3: 1.088609 seconds
+    Time for relu3: 0.066288 seconds
+    Time for pool3: 0.025056 seconds
+    Time for fc: 0.073996 seconds
+    Time for softmax: 0.000581 seconds
+
+  Conv: 7.094704 seconds
+  ReLU: 0.313443 seconds
+  Pool: 0.094510 seconds
+  FC:   0.073996 seconds
+  Softmax: 0.000581 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000021 seconds
+Free memory time:0.000071 seconds
+Total time:7.607563 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-if/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 0
+    50: compute region reached 3600 times
+        50: kernel launched 3600 times
+            grid: [560]  block: [128]
+            elapsed time(us): total=7,078,597 max=3,441 min=685 avg=1,966
+    50: data region reached 7200 times
+```
+
+#### nvprof
+
+```
+$ nvprof ./cnn-cifar10-profile 
+Parallel (if) Code
+CNN for 1200 images
+==3172958== NVPROF is profiling process 3172958, command: ./cnn-cifar10-profile
+Loading input batch 1...
+Load Data time:0.024031 seconds
+Create Network time:0.000089 seconds
+Load Network Parameters time:0.008009 seconds
+Create Ouputs time:0.000092 seconds
+
+Net Forward total time:8.129776 seconds
+    Time for conv1: 3.155518 seconds
+    Time for relu1: 0.372521 seconds
+    Time for pool1: 0.051608 seconds
+    Time for conv2: 2.892638 seconds
+    Time for relu2: 0.150814 seconds
+    Time for pool2: 0.013042 seconds
+    Time for conv3: 1.136566 seconds
+    Time for relu3: 0.136822 seconds
+    Time for pool3: 0.053488 seconds
+    Time for fc: 0.165381 seconds
+    Time for softmax: 0.000715 seconds
+
+  Conv: 7.184722 seconds
+  ReLU: 0.660157 seconds
+  Pool: 0.118138 seconds
+  FC:   0.165381 seconds
+  Softmax: 0.000715 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000035 seconds
+Free memory time:0.000075 seconds
+Total time:8.162108 seconds
+END!
+==3172958== Profiling application: ./cnn-cifar10-profile
+==3172958== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:  100.00%  7.10026s      3600  1.9723ms  764.57us  3.4771ms  _8layers_c_conv_forward_50_gpu
+      API calls:   96.94%  7.11527s      7200  988.23us  1.3730us  3.4762ms  cuStreamSynchronize
+                    2.38%  174.45ms         1  174.45ms  174.45ms  174.45ms  cuDevicePrimaryCtxRetain
+                    0.30%  22.304ms      3600  6.1950us  4.7550us  815.00us  cuLaunchKernel
+                    0.28%  20.694ms         1  20.694ms  20.694ms  20.694ms  cuMemAllocManaged
+                    0.03%  2.4605ms      7200     341ns     186ns  75.124us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.02%  1.7417ms         1  1.7417ms  1.7417ms  1.7417ms  cuMemAllocHost
+                    0.02%  1.5382ms      3609     426ns     140ns  778.22us  cuDeviceGetAttribute
+                    0.01%  851.50us      1208     704ns     241ns  23.099us  cuPointerGetAttributes
+                    0.00%  310.13us         1  310.13us  310.13us  310.13us  cuModuleLoadDataEx
+                    0.00%  174.42us         1  174.42us  174.42us  174.42us  cuMemAlloc
+                    0.00%  9.5660us         1  9.5660us  9.5660us  9.5660us  cuDeviceGetPCIBusId
+                    0.00%  6.8080us         1  6.8080us  6.8080us  6.8080us  cuModuleGetFunction
+                    0.00%  3.7060us         3  1.2350us     357ns  1.8120us  cuCtxSetCurrent
+                    0.00%  1.7550us         2     877ns     468ns  1.2870us  cuDeviceTotalMem
+                    0.00%  1.4900us         3     496ns     133ns  1.1240us  cuDeviceGetCount
+                    0.00%     824ns         3     274ns     117ns     488ns  cuDriverGetVersion
+                    0.00%     651ns         2     325ns     140ns     511ns  cuDeviceGet
+                    0.00%     638ns         1     638ns     638ns     638ns  cuDeviceComputeCapability
+                    0.00%     482ns         1     482ns     482ns     482ns  cuCtxGetCurrent
+ OpenACC (excl):   99.21%  7.12198s      7200  989.16us  2.0470us  3.4776ms  acc_wait@layers.c:50
+                    0.38%  27.165ms      3600  7.5450us  5.9060us  816.80us  acc_enqueue_launch@layers.c:50 (_8layers_c_conv_forward_50_gpu)
+                    0.18%  13.034ms      3600  3.6200us  2.6800us  782.63us  acc_compute_construct@layers.c:50
+                    0.14%  9.8901ms      3600  2.7470us  1.8690us  126.13us  acc_enter_data@layers.c:50
+                    0.08%  6.0874ms      3600  1.6900us  1.2150us  760.11us  acc_exit_data@layers.c:50
+                    0.01%  397.57us         1  397.57us  397.57us  397.57us  acc_device_init
+
+==3172958== Unified Memory profiling result:
+Device "Tesla V100-PCIE-32GB (0)"
+   Count  Avg Size  Min Size  Max Size  Total Size  Total Time  Name
+   19939  13.748KB  4.0000KB  0.9961MB  267.7031MB  66.84819ms  Host To Device
+   27896  9.3057KB  4.0000KB  448.00KB  253.5234MB  48.68387ms  Device To Host
+    9509         -         -         -           -   1.661236s  Gpu page fault groups
+    7645  4.0000KB  4.0000KB  4.0000KB  29.86328MB           -  Memory thrashes
+Total CPU Page faults: 18339
+Total CPU thrashes: 7645
+```
+
+
 ## if
 ### Without Reduction
 
@@ -199,6 +330,168 @@ Free memory time:0.001369 seconds
 Total time:5.900793 seconds
 END!
 ```
+#### Profiling
+
+##### NV_ACCC_TIME=1
+```
+$ ./cnn-cifar10 
+Parallel (if) Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.020446 seconds
+CUPTI ERROR: cuptiActivityEnable(CUPTI_ACTIVITY_KIND_KERNEL) returned: CUPTI_ERROR_INSUFFICIENT_PRIVILEGES, 
+         at ../../src-cupti/prof_cuda_cupti.c:338.
+Create Network time:0.332590 seconds
+Load Network Parameters time:0.008112 seconds
+Create Ouputs time:0.000042 seconds
+
+Net Forward total time:5.759420 seconds
+    Time for conv1: 2.765880 seconds
+    Time for relu1: 0.011108 seconds
+    Time for pool1: 0.046872 seconds
+    Time for conv2: 2.201134 seconds
+    Time for relu2: 0.003435 seconds
+    Time for pool2: 0.014983 seconds
+    Time for conv3: 0.705536 seconds
+    Time for relu3: 0.001006 seconds
+    Time for pool3: 0.003777 seconds
+    Time for fc: 0.005054 seconds
+    Time for softmax: 0.000287 seconds
+
+  Conv: 5.672550 seconds
+  ReLU: 0.015550 seconds
+  Pool: 0.065632 seconds
+  FC:   0.005054 seconds
+  Softmax: 0.000287 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000035 seconds
+Free memory time:0.001512 seconds
+Total time:6.122157 seconds
+END!
+
+Accelerator Kernel Timing data
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-if/layers.c
+  make_conv_layer  NVIDIA  devicenum=0
+    time(us): 195
+    35: data region reached 6 times
+        35: data copyin transfers: 15
+             device time(us): total=195 max=34 min=4 avg=13
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-if/layers.c
+  free_conv  NVIDIA  devicenum=0
+    time(us): 139
+    43: data region reached 6 times
+        43: data copyin transfers: 12
+             device time(us): total=139 max=25 min=3 avg=11
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-if/layers.c
+  conv_forward  NVIDIA  devicenum=0
+    time(us): 86,933
+    51: compute region reached 3600 times
+        51: kernel launched 3600 times
+            grid: [560]  block: [128]
+            elapsed time(us): total=5,500,239 max=2,528 min=546 avg=1,527
+    51: data region reached 7200 times
+        51: data copyin transfers: 3600
+             device time(us): total=31,908 max=33 min=4 avg=8
+        82: data copyout transfers: 3600
+             device time(us): total=55,025 max=82 min=8 avg=15
+/home/olia/Diplomatiki/cnn-cifar10_0/serial2parallel-if/layers.c
+  load_conv  NVIDIA  devicenum=0
+    time(us): 59
+    270: update directive reached 3 times
+        270: data copyin transfers: 6
+             device time(us): total=59 max=24 min=3 avg=9
+```
+
+##### nvprof
+```
+$ nvprof ./cnn-cifar10-profile 
+Parallel (if) Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.020891 seconds
+==3136051== NVPROF is profiling process 3136051, command: ./cnn-cifar10-profile
+Create Network time:0.444831 seconds
+Load Network Parameters time:0.008428 seconds
+Create Ouputs time:0.000052 seconds
+
+Net Forward total time:5.749685 seconds
+    Time for conv1: 2.768874 seconds
+    Time for relu1: 0.017919 seconds
+    Time for pool1: 0.039199 seconds
+    Time for conv2: 2.195292 seconds
+    Time for relu2: 0.004901 seconds
+    Time for pool2: 0.013241 seconds
+    Time for conv3: 0.699602 seconds
+    Time for relu3: 0.001367 seconds
+    Time for pool3: 0.003120 seconds
+    Time for fc: 0.005196 seconds
+    Time for softmax: 0.000390 seconds
+
+  Conv: 5.663768 seconds
+  ReLU: 0.024187 seconds
+  Pool: 0.055560 seconds
+  FC:   0.005196 seconds
+  Softmax: 0.000390 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000032 seconds
+Free memory time:0.001336 seconds
+Total time:6.225254 seconds
+END!
+==3136051== Profiling application: ./cnn-cifar10-profile
+==3136051== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:   99.68%  5.45148s      3600  1.5143ms  535.58us  2.4907ms  _8layers_c_conv_forward_51_gpu
+                    0.20%  10.850ms      3600  3.0130us  1.3750us  17.824us  [CUDA memcpy DtoH]
+                    0.12%  6.6799ms      3621  1.8440us     672ns  5.7590us  [CUDA memcpy HtoD]
+      API calls:   94.89%  5.47680s     10809  506.69us  1.0980us  2.6201ms  cuStreamSynchronize
+                    2.39%  138.23ms         1  138.23ms  138.23ms  138.23ms  cuDevicePrimaryCtxRetain
+                    1.09%  63.059ms      3600  17.516us  10.665us  643.64us  cuMemcpyDtoHAsync
+                    0.73%  41.917ms         1  41.917ms  41.917ms  41.917ms  cuMemHostAlloc
+                    0.47%  26.850ms      3621  7.4150us  2.7770us  50.515us  cuMemcpyHtoDAsync
+                    0.32%  18.284ms      3600  5.0780us  4.0120us  1.1053ms  cuLaunchKernel
+                    0.05%  2.8176ms      7200     391ns     186ns  793.83us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.03%  1.4629ms      3609     405ns     142ns  785.52us  cuDeviceGetAttribute
+                    0.02%  1.3256ms         1  1.3256ms  1.3256ms  1.3256ms  cuMemAllocHost
+                    0.01%  712.66us      1214     587ns     376ns  24.253us  cuPointerGetAttributes
+                    0.00%  210.69us        16  13.168us  2.4880us  138.23us  cuMemAlloc
+                    0.00%  178.81us         1  178.81us  178.81us  178.81us  cuModuleLoadDataEx
+                    0.00%  17.708us         1  17.708us  17.708us  17.708us  cuDeviceGetPCIBusId
+                    0.00%  7.3910us         1  7.3910us  7.3910us  7.3910us  cuCtxGetCurrent
+                    0.00%  2.3220us         3     774ns     216ns  1.1350us  cuCtxSetCurrent
+                    0.00%  1.4380us         1  1.4380us  1.4380us  1.4380us  cuModuleGetFunction
+                    0.00%  1.2850us         3     428ns     121ns     989ns  cuDeviceGetCount
+                    0.00%     674ns         2     337ns     169ns     505ns  cuDeviceGet
+                    0.00%     526ns         3     175ns     119ns     243ns  cuDriverGetVersion
+                    0.00%     382ns         1     382ns     382ns     382ns  cuDeviceComputeCapability
+ OpenACC (excl):   96.10%  5.47834s      7200  760.88us  2.0720us  2.6225ms  acc_wait@layers.c:51
+                    1.16%  66.292ms      3600  18.414us  11.380us  660.44us  acc_enqueue_download@layers.c:82 (Y[:l->out_size])
+                    0.74%  42.263ms         6  7.0438ms  14.152us  42.022ms  acc_enter_data@layers.c:35
+                    0.52%  29.610ms      3600  8.2240us  4.2680us  53.232us  acc_enqueue_upload@layers.c:51 (X[:in_size])
+                    0.50%  28.362ms      3600  7.8780us  5.0260us  1.1073ms  acc_enqueue_launch@layers.c:51 (_8layers_c_conv_forward_51_gpu)
+                    0.36%  20.415ms      3600  5.6700us  4.3680us  1.0832ms  acc_enter_data@layers.c:51
+                    0.27%  15.649ms      3600  4.3470us  3.6510us  36.250us  acc_exit_data@layers.c:51
+                    0.21%  12.080ms      3600  3.3550us  2.5360us  800.43us  acc_compute_construct@layers.c:51
+                    0.13%  7.3243ms      3600  2.0340us  1.7610us  118.02us  acc_wait@layers.c:82
+                    0.00%  235.56us         1  235.56us  235.56us  235.56us  acc_device_init@layers.c:35
+                    0.00%  73.778us        12  6.1480us     875ns  27.643us  acc_enqueue_upload@layers.c:35 (.attach.)
+                    0.00%  51.837us        12  4.3190us     831ns  24.500us  acc_enqueue_upload@layers.c:43 (.detach.)
+                    0.00%  47.873us         6  7.9780us  4.5210us  20.131us  acc_wait@layers.c:35
+                    0.00%  43.040us         3  14.346us  7.9060us  18.459us  acc_enqueue_upload@layers.c:270 (l->weights[:l->weights_size])
+                    0.00%  35.558us         6  5.9260us  1.7600us  21.111us  acc_exit_data@layers.c:43
+                    0.00%  27.778us         3  9.2590us  4.3570us  17.721us  acc_enqueue_upload@layers.c:35 (layer[:1])
+                    0.00%  21.244us         3  7.0810us  3.5260us  9.2320us  acc_wait@layers.c:270
+                    0.00%  15.261us         3  5.0870us  3.0500us  9.0840us  acc_update@layers.c:270
+                    0.00%  11.919us         3  3.9730us  3.6440us  4.4390us  acc_enqueue_upload@layers.c:270 (l->bias[:l->out_depth])
+                    0.00%       0ns      7200       0ns       0ns       0ns  acc_delete@layers.c:82
+                    0.00%       0ns         9       0ns       0ns       0ns  acc_delete@layers.c:43
+                    0.00%       0ns         6       0ns       0ns       0ns  acc_alloc@layers.c:51
+                    0.00%       0ns      7200       0ns       0ns       0ns  acc_create@layers.c:51
+                    0.00%       0ns         9       0ns       0ns       0ns  acc_alloc@layers.c:35
+                    0.00%       0ns         9       0ns       0ns       0ns  acc_create@layers.c:35
+```
+
 ### 50k images
 
 ```
@@ -407,3 +700,103 @@ Total time:4.088277 seconds
 END!
 ```
 
+#### Profiling
+##### nvporof
+
+```
+$ nvprof ./cnn-cifar10-profile 
+Parallel (pad) Code
+CNN for 1200 images
+Loading input batch 1...
+Load Data time:0.022038 seconds
+==3409405== NVPROF is profiling process 3409405, command: ./cnn-cifar10-profile
+Create Network time:0.480850 seconds
+Load Network Parameters time:0.008305 seconds
+Create Ouputs time:0.000038 seconds
+
+Net Forward total time:3.934778 seconds
+    Time for conv1: 2.071898 seconds
+    Time for relu1: 0.017331 seconds
+    Time for pool1: 0.038384 seconds
+    Time for conv2: 1.321276 seconds
+    Time for relu2: 0.004870 seconds
+    Time for pool2: 0.013281 seconds
+    Time for conv3: 0.456898 seconds
+    Time for relu3: 0.001509 seconds
+    Time for pool3: 0.003146 seconds
+    Time for fc: 0.005198 seconds
+    Time for softmax: 0.000381 seconds
+
+  Conv: 3.850072 seconds
+  ReLU: 0.023709 seconds
+  Pool: 0.054811 seconds
+  FC:   0.005198 seconds
+  Softmax: 0.000381 seconds
+
+Net Accuracy: 78.25 % 
+Net Accuracy time:0.000037 seconds
+Free memory time:0.002263 seconds
+Total time:4.448310 seconds
+END!
+==3409405== Profiling application: ./cnn-cifar10-profile
+==3409405== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:   99.20%  3.54577s      3600  984.94us  308.38us  1.7994ms  _8layers_c_conv_forward_80_gpu
+                    0.31%  11.198ms      3600  3.1100us  2.9110us  13.056us  _8layers_c_pad_input_61_gpu
+                    0.30%  10.716ms      3600  2.9760us  1.3430us  18.272us  [CUDA memcpy DtoH]
+                    0.19%  6.6946ms      3630  1.8440us     640ns  5.7920us  [CUDA memcpy HtoD]
+      API calls:   91.16%  3.60438s     18012  200.11us  1.0550us  2.9888ms  cuStreamSynchronize
+                    4.04%  159.88ms         1  159.88ms  159.88ms  159.88ms  cuDevicePrimaryCtxRetain
+                    1.61%  63.481ms      3600  17.633us  10.521us  745.61us  cuMemcpyDtoHAsync
+                    1.02%  40.420ms         1  40.420ms  40.420ms  40.420ms  cuMemHostAlloc
+                    1.00%  39.527ms      3630  10.889us  2.6820us  336.33us  cuMemcpyHtoDAsync
+                    0.81%  31.911ms      7200  4.4320us  3.7390us  54.447us  cuLaunchKernel
+                    0.17%  6.8244ms     14400     473ns     180ns  788.09us  cuOccupancyMaxActiveBlocksPerMultiprocessor
+                    0.10%  3.8186ms        18  212.14us  2.4450us  3.7306ms  cuMemAlloc
+                    0.03%  1.3586ms         1  1.3586ms  1.3586ms  1.3586ms  cuMemAllocHost
+                    0.03%  1.1783ms      7209     163ns     124ns  11.428us  cuDeviceGetAttribute
+                    0.02%  718.64us      1217     590ns     331ns  23.463us  cuPointerGetAttributes
+                    0.01%  265.95us         1  265.95us  265.95us  265.95us  cuModuleLoadDataEx
+                    0.00%  15.822us         2  7.9110us     657ns  15.165us  cuModuleGetFunction
+                    0.00%  10.252us         1  10.252us  10.252us  10.252us  cuDeviceGetPCIBusId
+                    0.00%  3.1790us         3  1.0590us     223ns  1.6250us  cuCtxSetCurrent
+                    0.00%  1.7630us         3     587ns     111ns  1.4760us  cuDeviceGetCount
+                    0.00%     658ns         2     329ns     158ns     500ns  cuDeviceGet
+                    0.00%     583ns         3     194ns     123ns     304ns  cuDriverGetVersion
+                    0.00%     519ns         1     519ns     519ns     519ns  cuCtxGetCurrent
+                    0.00%     475ns         1     475ns     475ns     475ns  cuDeviceComputeCapability
+ OpenACC (excl):   91.88%  3.56870s      7200  495.65us  1.6720us  3.0467ms  acc_wait@layers.c:80
+                    1.71%  66.599ms      3600  18.499us  11.259us  747.19us  acc_enqueue_download@layers.c:108 (Y[:l->out_size])
+                    1.09%  42.253ms      3600  11.736us  4.3730us  337.18us  acc_enqueue_upload@layers.c:61 (X[:in_size])
+                    1.08%  41.932ms      7200  5.8230us  2.0990us  1.1268ms  acc_wait@layers.c:61
+                    1.05%  40.840ms         9  4.5378ms  11.880us  40.540ms  acc_enter_data@layers.c:42
+                    0.58%  22.384ms      3600  6.2170us  4.9990us  738.56us  acc_enqueue_launch@layers.c:61 (_8layers_c_pad_input_61_gpu)
+                    0.48%  18.750ms      3600  5.2080us  4.6840us  21.521us  acc_enqueue_launch@layers.c:80 (_8layers_c_conv_forward_80_gpu)
+                    0.40%  15.675ms      3600  4.3540us  3.2380us  1.1455ms  acc_enter_data@layers.c:61
+                    0.37%  14.364ms      3600  3.9900us  2.7410us  780.30us  acc_exit_data@layers.c:80
+                    0.35%  13.431ms      3600  3.7300us  2.4710us  764.43us  acc_compute_construct@layers.c:80
+                    0.32%  12.581ms      3600  3.4940us  2.5750us  791.79us  acc_compute_construct@layers.c:61
+                    0.25%  9.8228ms      3600  2.7280us  2.4550us  19.159us  acc_enter_data@layers.c:80
+                    0.20%  7.8607ms      3600  2.1830us  1.9580us  21.515us  acc_exit_data@layers.c:61
+                    0.18%  7.1386ms      3600  1.9820us  1.7700us  19.938us  acc_wait@layers.c:108
+                    0.02%  869.10us        18  48.283us     904ns  782.98us  acc_enqueue_upload@layers.c:53 (.detach.)
+                    0.01%  341.22us         1  341.22us  341.22us  341.22us  acc_device_init@layers.c:42
+                    0.00%  98.543us        18  5.4740us     821ns  35.573us  acc_enqueue_upload@layers.c:42 (.attach.)
+                    0.00%  60.782us         9  6.7530us  4.5420us  11.631us  acc_wait@layers.c:42
+                    0.00%  46.753us         9  5.1940us  1.7500us  20.309us  acc_exit_data@layers.c:53
+                    0.00%  42.868us         3  14.289us  8.2590us  18.757us  acc_enqueue_upload@layers.c:296 (l->weights[:l->weights_size])
+                    0.00%  39.688us         3  13.229us  4.5530us  30.539us  acc_enqueue_upload@layers.c:42 (layer[:1])
+                    0.00%  32.545us         3  10.848us  7.7080us  12.869us  acc_enqueue_upload@layers.c:42 (layer->in_padded[:layer->padded_size])
+                    0.00%  20.927us         3  6.9750us  3.4980us  9.1530us  acc_wait@layers.c:296
+                    0.00%  15.441us         3  5.1470us  3.1250us  8.9870us  acc_update@layers.c:296
+                    0.00%  11.152us         3  3.7170us  3.4970us  3.8440us  acc_enqueue_upload@layers.c:296 (l->bias[:l->out_depth])
+                    0.00%       0ns         2       0ns       0ns       0ns  acc_alloc@layers.c:80
+                    0.00%       0ns         3       0ns       0ns       0ns  acc_alloc@layers.c:61
+                    0.00%       0ns      3600       0ns       0ns       0ns  acc_create@layers.c:80
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_alloc@layers.c:42
+                    0.00%       0ns      3600       0ns       0ns       0ns  acc_create@layers.c:61
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_create@layers.c:42
+                    0.00%       0ns      3600       0ns       0ns       0ns  acc_delete@layers.c:73
+                    0.00%       0ns        12       0ns       0ns       0ns  acc_delete@layers.c:53
+                    0.00%       0ns      3600       0ns       0ns       0ns  acc_delete@layers.c:108
+```
